--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=demo
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/university
 spring.datasource.username=postgres
-spring.datasource.password=yourpassword
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-graphql.servlet.mapping=/graphql
-graphql.servlet.enabled=true
-graphiql.enabled=true
-graphiql.endpoint=/graphiql
+spring.graphql.schema.locations=classpath:graphql/
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
+
